--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,11 @@ body, .md-app {
     height: 100%;
 }
 
+*::selection {
+    background-color: #448aff !important;
+    color: #fff !important;
+}
+
 
 /*
  * Additional flex classes, inspired by AngularJS Material
